# LLM-Mistral-Chatbot-UI

./: README.md  pyproject.toml
src/: main.py
src/features/: client.py  interface.py
src/models/: chat.py
src/utils/: config.py
